--- a/deepexi-dd-middle-order-qa/deepexi-gxs-middle-order-provider/src/main/resources/application.properties
+++ b/deepexi-dd-middle-order-qa/deepexi-gxs-middle-order-provider/src/main/resources/application.properties
@@ -19,7 +19,7 @@ server.port=8501
 #eureka.client.register-with-eureka=true
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
-eureka.client.service-url.defaultZone=http://124.70.165.127:8080/eureka/
+eureka.client.service-url.defaultZone=http://127.0.0.1:8080/eureka/
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
@@ -39,10 +39,10 @@ logging.level.com.deepexi.middle.order.mapper=debug
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
 #MYSQL
-spring.datasource.url=jdbc:mysql://119.3.123.199:3306/deepexi_gxs_middle_order?useUnicode=true&characterEncoding=utf-8\
+spring.datasource.url=jdbc:mysql://124.70.153.227:3306/deepexi_gxs_middle_order?useUnicode=true&characterEncoding=utf-8\
   &useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Chgxw123@20200930
+spring.datasource.password=admin123456
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 # 数据库连接心跳:关闭的话数据库socket会断掉
 spring.datasource.test-while-idle=true
