--- a/deepexi-dd-middle-order-qa/deepexi-gxs-middle-order-provider/pom.xml
+++ b/deepexi-dd-middle-order-qa/deepexi-gxs-middle-order-provider/pom.xml
@@ -28,6 +28,14 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+
+        <!-- mysql -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
+        </dependency>
+
     </dependencies>
 
     <build>
