--- a/springcloud-eureka-feign-mybatis-seata/pom.xml
+++ b/springcloud-eureka-feign-mybatis-seata/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>io.seata.sample</groupId>
 	<artifactId>springcloud-eureka-feign-mybatis-seata</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
 	<name>springcloud-eureka-feign-mybatis-seata</name>
 	<description>Demo project for Spring Boot</description>
