--- a/deepexi-dd-domain-transaction-qa/deepexi-gxs-domain-transaction-provider/pom.xml
+++ b/deepexi-dd-domain-transaction-qa/deepexi-gxs-domain-transaction-provider/pom.xml
@@ -17,6 +17,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <!--            <version>2.9.1</version>-->
+            <version>3.2.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
